finish sequential read